--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3d865c</color>
     <color name="colorAccent">#7b52b4</color>
     <color name="textColorPrimary">#263238</color>
+    <color name="white_fade">#b2dfdb</color>
+    <color name="white">#fff</color>
 </resources>
